EmailSystem/manifests_bkp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: email-system
spec:
  selector:
    app: email-system
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
